Fix styling for icinga widget
too much copy paste...

--- a/widgets/icinga/icinga.scss
+++ b/widgets/icinga/icinga.scss
@@ -5,7 +5,7 @@ $warning: #edde43;
 $failure:#D23125;
 $error: #f75f00;
 
-.widget-nagios {
+.widget-icinga {
   li {
     position: absolute;
     top: 0;
